--- a/crates/aptos/Cargo.toml
+++ b/crates/aptos/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
+aptos-backup-cli = { workspace = true }
 aptos-bitvec = { workspace = true }
 aptos-build-info = { workspace = true }
 aptos-config = { workspace = true }
@@ -35,7 +36,6 @@ aptos-transactional-test-harness = { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm = { workspace = true, features = ["testing"] }
 async-trait = { workspace = true }
-backup-cli = { workspace = true }
 base64 = { workspace = true }
 bcs = { workspace = true }
 cached-packages = { workspace = true }
