--- a/testsuite/smoke-test/Cargo.toml
+++ b/testsuite/smoke-test/Cargo.toml
@@ -46,6 +46,7 @@ serde_json = { workspace = true }
 tokio = { workspace = true }
 
 [dev-dependencies]
+aptos-backup-cli = { workspace = true }
 aptos-genesis = { workspace = true }
 aptos-infallible = { workspace = true }
 aptos-logger = { workspace = true }
@@ -53,7 +54,6 @@ aptos-secure-storage = { workspace = true }
 aptos-time-service = { workspace = true }
 aptos-vault-client = { workspace = true }
 aptos-writeset-generator = { workspace = true }
-backup-cli = { workspace = true }
 base64 = { workspace = true }
 futures = { workspace = true }
 num_cpus = { workspace = true }
