[quorum store] payload_manager (#5464)

--- a/consensus/consensus-types/Cargo.toml
+++ b/consensus/consensus-types/Cargo.toml
@@ -28,6 +28,7 @@ proptest = { workspace = true, optional = true }
 rayon = { workspace = true }
 serde = { workspace = true }
 short-hex-str = { workspace = true }
+tokio = { workspace = true }
 
 [dev-dependencies]
 aptos-types = { workspace = true, features = ["fuzzing"] }
