--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -27,6 +27,7 @@ aptos-secure-storage = { workspace = true }
 aptos-temppath = { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm = { workspace = true }
+arc-swap = { workspace = true }
 async-trait = { workspace = true }
 bcs = { workspace = true }
 byteorder = { workspace = true }
