Add list of authors to doc pages. (#5827)
* Add list of authors to doc pages.

* Fix build & component title.

* Rendering the list doesn't work without DOM.

--- a/developer-docs-site/package.json
+++ b/developer-docs-site/package.json
@@ -25,6 +25,7 @@
     "@docusaurus/plugin-google-gtag": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@docusaurus/theme-classic": "^2.2.0",
+    "@docusaurus/theme-common": "^2.2.0",
     "@docusaurus/types": "^2.2.0",
     "@mdx-js/react": "1.6.22",
     "@stoplight/elements": "^7.7.3",
@@ -42,6 +43,7 @@
     "react-dom": "17.0.2",
     "rehype-katex": "5",
     "remark-math": "3",
+    "shelljs": "^0.8.5",
     "stream": "^0.0.2",
     "unist-util-visit": "4.1.0",
     "unist-util-visit-children": "2.0.0",
