--- a/network/discovery/Cargo.toml
+++ b/network/discovery/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
+aptos-channels = { workspace = true }
 aptos-config = { workspace = true }
 aptos-crypto = { workspace = true }
 aptos-event-notifications = { workspace = true }
@@ -25,7 +26,6 @@ aptos-short-hex-str = { workspace = true }
 aptos-time-service = { workspace = true }
 aptos-types = { workspace = true }
 bcs = { workspace = true }
-channel = { workspace = true }
 futures = { workspace = true }
 once_cell = { workspace = true }
 serde_yaml = { workspace = true }
