--- a/network/peer-monitoring-service/server/Cargo.toml
+++ b/network/peer-monitoring-service/server/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = { workspace = true }
 
 [dependencies]
 aptos-bounded-executor = { workspace = true }
+aptos-channels = { workspace = true }
 aptos-config = { workspace = true }
 aptos-logger = { workspace = true }
 aptos-metrics-core = { workspace = true }
@@ -23,7 +24,6 @@ aptos-peer-monitoring-service-types = { workspace = true }
 aptos-types = { workspace = true }
 bcs = { workspace = true }
 bytes = { workspace = true }
-channel = { workspace = true }
 futures = { workspace = true }
 once_cell = { workspace = true }
 serde = { workspace = true }
