--- a/.github/actions/verify-modules/action.yaml
+++ b/.github/actions/verify-modules/action.yaml
@@ -20,40 +20,16 @@ runs:
         command-adapter --config terraform/helm/fullnode/files/backup/$CONFIG_TEMPLATE_NAME \
         | echo LATEST_VERSION=`grep -Po '(?<=latest_transaction_version: )\d+'` \
         | tee -a $GITHUB_ENV
-    - name: run replay-verify in parallel
+    - name: run verify-modules in parallel
       shell: bash
       run: |
-        set -o nounset -o errexit -o pipefail
-        N=32
-        PER_PARTITION=$(( ($LATEST_VERSION - $HISTORY_START) / $N ))
-
-        for n in `seq 1 $N`
-        do
-          END=$(( $HISTORY_START + $n * $PER_PARTITION ))
-          END=$(($n == $N && $LATEST_VERSION > $END ? $LATEST_VERSION : $END))
-          START=$(($END - $PER_PARTITION))
-          NAME=run_${n}_${START}_$END
- 
-          mkdir $NAME
-          cp -r metadata-cache $NAME/
-
-          echo [main process] spawning $NAME
+          mkdir local
+          cp -r metadata-cache local/
           unbuffer target/release/replay-verify \
-          --txns-to-skip $TXNS_TO_SKIP \
-          --concurrent-downloads 2 \
-          --replay-concurrency-level 2 \
-          --metadata-cache-dir ./$NAME/metadata-cache \
-          --target-db-dir ./$NAME/db \
-          --start-version $START \
-          --end-version $END \
+          --validate-modules \
+          --concurrent-downloads 16 \
+          --replay-concurrency-level 4 \
+          --metadata-cache-dir ./local/metadata-cache \
+          --target-db-dir ./local/db \
+          --start-version $LATEST_VERSION \
           command-adapter --config terraform/helm/fullnode/files/backup/s3-public.yaml 2>&1 \
-          | sed --unbuffered -e "s/^/[partition $NAME] /" &
-        done
- 
-        # wait for subprocesses
-        for n in `seq 1 $N`
-        do
-          wait -n
-          echo [main process] $n out of $N runs finished.
-        done
-        echo [main process] finished.
