--- a/aptos-move/block-executor/Cargo.toml
+++ b/aptos-move/block-executor/Cargo.toml
@@ -26,6 +26,7 @@ criterion = { workspace = true, optional = true }
 crossbeam = { workspace = true }
 crossbeam-queue = { workspace = true }
 dashmap = { workspace = true }
+move-binary-format = { workspace = true }
 num_cpus = { workspace = true }
 once_cell = { workspace = true }
 proptest = { workspace = true, optional = true }
