--- a/.github/workflows/continuous-e2e-forge-continuous.yaml
+++ b/.github/workflows/continuous-e2e-forge-continuous.yaml
@@ -2,7 +2,7 @@ name: "Forge Continuous"
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 9,3 * * *"
   pull_request:
     paths:
       - ".github/workflows/forge-continuous.yaml"
