[crypto+move] add support for Blake2b-256 in Move (#5436)
* [crypto+move] added support for Blake2 256 in Move

Signed-off-by: Blas Rodriguez Irizar <rodrigblas@gmail.com>
Co-authored-by: Alin Tomescu <tomescu.alin@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -291,6 +291,8 @@ bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594
 better_any = "0.1.1"
 bigdecimal = { version = "0.3.0", features = ["serde"] }
 bitvec = "0.19.4"
+blake2 = "0.10.4"
+blake2-rfc = "0.2.18"
 blst = "0.3.7"
 byteorder = "1.4.3"
 bytes = "1.1.0"
