--- a/crates/aptos-crypto/Cargo.toml
+++ b/crates/aptos-crypto/Cargo.toml
@@ -42,6 +42,8 @@ x25519-dalek = { workspace = true }
 
 [dev-dependencies]
 bitvec = { workspace = true }
+blake2 = { workspace = true }
+blake2-rfc = { workspace = true }
 byteorder = { workspace = true }
 criterion = { workspace = true }
 proptest = { workspace = true }
