--- a/aptos-move/framework/Cargo.toml
+++ b/aptos-move/framework/Cargo.toml
@@ -23,6 +23,7 @@ aptos-types = { workspace = true }
 base64 = { workspace = true }
 bcs = { workspace = true }
 better_any = { workspace = true }
+blake2-rfc = { workspace = true }
 clap = { workspace = true }
 codespan-reporting = { workspace = true }
 curve25519-dalek = { workspace = true }
