[move-examples] changed option<u64> to u64 and added big_vec and bucket_table as part of the package (#5957)
Co-authored-by: chloeqjz <79347459+chloeqjz@users.noreply.github.com>

--- a/aptos-move/move-examples/post_mint_reveal_nft/Move.toml
+++ b/aptos-move/move-examples/post_mint_reveal_nft/Move.toml
@@ -9,4 +9,4 @@ AptosToken = { local = "../../framework/aptos-token" }
 DataStructure = { local = "../data_structures" }
 
 [addresses]
-source_addr = "0xcafe"
+source_addr = "_"
