--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -46,6 +46,7 @@ fail = { workspace = true }
 futures = { workspace = true }
 futures-channel = { workspace = true }
 itertools = { workspace = true }
+maplit = { workspace = true }
 mirai-annotations = { workspace = true }
 num-derive = { workspace = true }
 num-traits = { workspace = true }
