[Aptos Node] Clean up aptos-node crate

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -24,6 +24,9 @@
 /aptos-move/block-executor/ @gelash @zekun000 @sasha8
 /aptos-move/vm-genesis/ @davidiw @movekevin
 
+# Owner for aptos node (just to prevent things from becoming out of hand, again :D)
+/aptos-node/ @joshlind
+
 # Owner for logger config
 /config/src/config/logger_config.rs @markuze
 
