--- a/aptos-move/framework/Cargo.toml
+++ b/aptos-move/framework/Cargo.toml
@@ -61,6 +61,7 @@ siphasher = { workspace = true }
 smallvec = { workspace = true }
 tempfile = { workspace = true }
 tiny-keccak = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
 aptos-cached-packages = { workspace = true }
