--- a/aptos-node/Cargo.toml
+++ b/aptos-node/Cargo.toml
@@ -39,6 +39,7 @@ aptos-mempool = { workspace = true }
 aptos-mempool-notifications = { workspace = true }
 aptos-network = { workspace = true }
 aptos-network-builder = { workspace = true }
+aptos-runtimes = { workspace = true }
 aptos-secure-storage = { workspace = true }
 aptos-state-sync-driver = { workspace = true }
 aptos-state-view = { workspace = true }
