--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -21,6 +21,7 @@ aptos-config = { workspace = true }
 aptos-logger = { workspace = true }
 aptos-mempool = { workspace = true }
 aptos-metrics-core = { workspace = true }
+aptos-runtimes = { workspace = true }
 aptos-storage-interface = { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm = { workspace = true }
