--- a/mempool/Cargo.toml
+++ b/mempool/Cargo.toml
@@ -27,6 +27,7 @@ aptos-metrics-core = { workspace = true }
 aptos-netcore = { workspace = true }
 aptos-network = { workspace = true }
 aptos-proptest-helpers = { workspace = true, optional = true }
+aptos-runtimes = { workspace = true }
 aptos-short-hex-str = { workspace = true }
 aptos-storage-interface = { workspace = true }
 aptos-types = { workspace = true }
