--- a/state-sync/state-sync-v2/state-sync-driver/Cargo.toml
+++ b/state-sync/state-sync-v2/state-sync-driver/Cargo.toml
@@ -25,6 +25,7 @@ aptos-infallible = { workspace = true }
 aptos-logger = { workspace = true }
 aptos-mempool-notifications = { workspace = true }
 aptos-metrics-core = { workspace = true }
+aptos-runtimes = { workspace = true }
 aptos-schemadb = { workspace = true }
 aptos-scratchpad = { workspace = true }
 aptos-storage-interface = { workspace = true }
