--- a/testsuite/testcases/Cargo.toml
+++ b/testsuite/testcases/Cargo.toml
@@ -22,6 +22,7 @@ aptos-keygen = { workspace = true }
 aptos-logger = { workspace = true }
 aptos-move-examples = { workspace = true }
 aptos-rest-client = { workspace = true }
+aptos-runtimes = { workspace = true }
 aptos-sdk = { workspace = true }
 aptos-types = { workspace = true }
 futures = { workspace = true }
