publish and use module in txn emitter (#5744)
Co-authored-by: Dario Russi <dario@aptoslabs.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,6 +123,7 @@ members = [
     "testsuite/forge",
     "testsuite/forge-cli",
     "testsuite/generate-format",
+    "testsuite/module-publish",
     "testsuite/smoke-test",
     "testsuite/testcases",
     "types",
