[Executor] Support for consensus-only perf test

--- a/execution/executor/Cargo.toml
+++ b/execution/executor/Cargo.toml
@@ -52,3 +52,4 @@ rand = { workspace = true }
 default = []
 fuzzing = ["aptos-consensus-types/fuzzing", "aptos-crypto/fuzzing", "aptos-types/fuzzing", "aptos-storage-interface/fuzzing"]
 failpoints = ["fail/failpoints", "aptos-vm/failpoints"]
+consensus-only-perf-test = []
