[aptos-node] Support for consensus-only perf test

--- a/aptos-node/Cargo.toml
+++ b/aptos-node/Cargo.toml
@@ -72,3 +72,4 @@ assert-private-keys-not-cloneable = ["aptos-crypto/assert-private-keys-not-clone
 failpoints = ["fail/failpoints", "aptos-consensus/failpoints", "aptos-executor/failpoints", "aptos-mempool/failpoints", "aptos-api/failpoints"]
 indexer = ["aptos-indexer"]
 check-vm-features = []
+consensus-only-perf-test = ["aptos-executor/consensus-only-perf-test", "aptos-mempool/consensus-only-perf-test", "aptos-db/consensus-only-perf-test"]
