--- a/.github/workflows/verify-on-chain-modules-testnet.yaml
+++ b/.github/workflows/verify-on-chain-modules-testnet.yaml
@@ -22,7 +22,7 @@ env:
 jobs:
   replay-transactions:
     timeout-minutes: 720
-    runs-on: ubuntu-latest
+    runs-on: high-perf-docker-with-local-ssd
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
         with:
