--- a/state-sync/storage-service/server/Cargo.toml
+++ b/state-sync/storage-service/server/Cargo.toml
@@ -41,5 +41,6 @@ aptos-storage-interface = { workspace = true }
 aptos-time-service = { workspace = true, features = ["async", "testing"] }
 aptos-types = { workspace = true }
 claims = { workspace = true }
+maplit = { workspace = true }
 mockall = { workspace = true }
 rand = { workspace = true }
