--- a/.github/workflows/docker-build-test.yaml
+++ b/.github/workflows/docker-build-test.yaml
@@ -38,12 +38,10 @@ on: # build on main branch OR when a PR is labeled with `CICD:build-images`
   push:
     branches:
       - main
-      - auto
-      - canary
-      - chaotic
       - devnet
       - testnet
       - mainnet
+      - aptos-node-v*
 
 # cancel redundant builds
 concurrency:
