--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -128,6 +128,8 @@ jobs:
 
   rust-consensus-only-unit-test:
     runs-on: high-perf-docker
+    if: |
+      contains(github.event.pull_request.labels.*.name, 'CICD:build-consensus-only-image')
     steps:
       - uses: actions/checkout@v3
         with:
