--- a/aptos-move/aptos-release-builder/Cargo.toml
+++ b/aptos-move/aptos-release-builder/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
+aptos = { workspace = true }
 aptos-crypto = { workspace = true }
 aptos-gas = { workspace = true }
 aptos-rest-client = { workspace = true }
@@ -22,6 +23,7 @@ aptos-types = { workspace = true }
 bcs = { workspace = true }
 clap = { workspace = true }
 futures = { workspace = true }
+hex = { workspace = true }
 move-core-types = { workspace = true }
 move-model = { workspace = true }
 serde = { workspace = true }
