--- a/execution/executor-benchmark/Cargo.toml
+++ b/execution/executor-benchmark/Cargo.toml
@@ -13,6 +13,7 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
+anyhow = { workspace = true }
 aptos-config = { workspace = true }
 aptos-crypto = { workspace = true }
 aptos-db = { workspace = true }
@@ -30,11 +31,14 @@ aptos-state-view = { workspace = true }
 aptos-storage-interface = { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm = { workspace = true }
+bcs = { workspace = true }
 chrono = { workspace = true }
 criterion = { workspace = true }
 indicatif = { workspace = true }
 itertools = { workspace = true }
+move-core-types = { workspace = true }
 num_cpus = { workspace = true }
+once_cell = { workspace = true }
 rand = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
@@ -50,7 +54,3 @@ aptos-temppath = { workspace = true }
 [features]
 default = []
 fuzzing = ["aptos-config/fuzzing", "aptos-crypto/fuzzing", "aptos-types/fuzzing"]
-
-[[bench]]
-name = "executor_benchmark"
-harness = false
