--- a/execution/executor-benchmark/Cargo.toml
+++ b/execution/executor-benchmark/Cargo.toml
@@ -23,6 +23,7 @@ aptos-genesis = { workspace = true, features = ["testing"] }
 aptos-infallible = { workspace = true }
 aptos-jellyfish-merkle = { workspace = true }
 aptos-logger = { workspace = true }
+aptos-metrics-core = { workspace = true }
 aptos-push-metrics =  { workspace = true }
 aptos-schemadb = { workspace = true }
 aptos-scratchpad = { workspace = true }
