--- a/state-sync/storage-service/server/Cargo.toml
+++ b/state-sync/storage-service/server/Cargo.toml
@@ -36,6 +36,7 @@ tokio = { workspace = true }
 [dev-dependencies]
 anyhow = { workspace = true }
 aptos-bitvec = { workspace = true }
+aptos-config = { workspace = true, features = ["fuzzing"] }
 aptos-crypto = { workspace = true }
 aptos-storage-interface = { workspace = true }
 aptos-time-service = { workspace = true, features = ["async", "testing"] }
