--- a/.github/actions/replay-verify/action.yaml
+++ b/.github/actions/replay-verify/action.yaml
@@ -46,6 +46,7 @@ runs:
           --target-db-dir ./$NAME/db \
           --start-version $START \
           --end-version $END \
+          --lazy-quit \
           command-adapter --config terraform/helm/fullnode/files/backup/s3-public.yaml 2>&1 \
           | sed --unbuffered -e "s/^/[partition $NAME] /" &
         done
