--- a/.github/workflows/fullnode-execute-devnet-stable.yaml
+++ b/.github/workflows/fullnode-execute-devnet-stable.yaml
@@ -6,7 +6,7 @@ name: "fullnode-execute-devnet-stable"
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 9/12 * * *"
+    - cron: "0 0,12 * * *" # At hour 0 and 12 - aka twice a day (UTC)
   pull_request:
     paths:
       - ".github/workflows/fullnode-execute-devnet-stable.yaml"
