--- a/Cargo.toml
+++ b/Cargo.toml
@@ -340,6 +340,8 @@ futures-channel = "= 0.3.24"
 futures-util = "0.3.21"
 gcp-bigquery-client = "0.13.0"
 get_if_addrs = "0.5.3"
+git2 = "0.16.1"
+git-version = "0.3.5"
 glob = "0.3.0"
 goldenfile = "1.1.0"
 handlebars = "4.2.2"
