--- a/aptos-move/aptos-release-builder/Cargo.toml
+++ b/aptos-move/aptos-release-builder/Cargo.toml
@@ -16,13 +16,17 @@ rust-version = { workspace = true }
 anyhow = { workspace = true }
 aptos = { workspace = true }
 aptos-crypto = { workspace = true }
+aptos-framework = { workspace = true }
 aptos-gas = { workspace = true }
 aptos-rest-client = { workspace = true }
 aptos-temppath = { workspace = true }
 aptos-types = { workspace = true }
+aptos-vm-genesis = { workspace = true }
 bcs = { workspace = true }
 clap = { workspace = true }
 futures = { workspace = true }
+git-version = "0.3.5"
+git2 = { workspace = true }
 hex = { workspace = true }
 move-binary-format = { workspace = true }
 move-core-types = { workspace = true }
