[Indexer gRPC][1/n] Add grpc endpoint to full node (#6269)
* Add grpc endpoint to full node

* lint

* format

* lint

* Changing error handling in fullnode

* address comments

* Add timestamp to each transaction output and readme

* Move chain id to response

* address comments

* Lint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,12 +71,14 @@ members = [
     "crates/fallible",
     "crates/indexer",
     "crates/inspection-service",
+    "crates/moving-average",
     "crates/node-resource-metrics",
     "crates/num-variants",
     "crates/proxy",
     "crates/short-hex-str",
     "crates/transaction-emitter",
     "crates/transaction-emitter-lib",
+    "ecosystem/indexer-grpc/indexer-grpc-fullnode",
     "ecosystem/node-checker",
     "ecosystem/node-checker/fn-check-client",
     "execution/db-bootstrapper",
@@ -212,6 +214,7 @@ aptos-github-client = { path = "secure/storage/github" }
 aptos-global-constants = { path = "config/global-constants" }
 aptos-id-generator = { path = "crates/aptos-id-generator" }
 aptos-indexer = { path = "crates/indexer" }
+aptos-indexer-grpc-fullnode = { path = "ecosystem/indexer-grpc/indexer-grpc-fullnode" }
 aptos-infallible = { path = "crates/aptos-infallible" }
 aptos-inspection-service = { path = "crates/inspection-service" }
 aptos-jellyfish-merkle = { path = "storage/jellyfish-merkle" }
@@ -224,6 +227,7 @@ aptos-mempool-notifications = { path = "state-sync/inter-component/mempool-notif
 aptos-memsocket = { path = "network/memsocket" }
 aptos-metrics-core = { path = "crates/aptos-metrics-core" }
 aptos-move-examples = { path = "aptos-move/move-examples" }
+aptos-moving-average = { path = "crates/moving-average" }
 aptos-mvhashmap = { path = "aptos-move/mvhashmap" }
 aptos-netcore = { path = "network/netcore" }
 aptos-network = { path = "network" }
