[Storage] Add a db truncation tool. (#6482)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -445,6 +445,7 @@ shadow-rs = "0.16.2"
 smallvec = "1.8.0"
 static_assertions = "1.1.0"
 stats_alloc = "0.1.8"
+status-line = "0.2.0"
 strum = "0.24.1"
 strum_macros = "0.24.2"
 structopt = "0.3.21"
