--- a/.github/workflows/continuous-e2e-forge-continuous.yaml
+++ b/.github/workflows/continuous-e2e-forge-continuous.yaml
@@ -18,7 +18,7 @@ permissions:
 
 jobs:
   forge-continuous:
-    uses: ./.github/workflows/workflow-run-forge.yaml
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
     secrets: inherit
     with:
       COMMENT_HEADER: forge-continuous
