--- a/.github/workflows/module-verify.yaml
+++ b/.github/workflows/module-verify.yaml
@@ -31,7 +31,7 @@ concurrency:
 jobs:
   verify-modules-testnet:
     if: ${{ github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all' }}
-    uses: ./.github/workflows/workflow-run-module-verify.yaml
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-module-verify.yaml@main
     with:
       GIT_SHA: ${{ inputs.GIT_SHA }}
       BUCKET: aptos-testnet-backup-2223d95b
@@ -43,7 +43,7 @@ jobs:
 
   verify-modules-mainnet:
     if: ${{ github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'mainnet' || inputs.CHAIN_NAME == 'all' }}
-    uses: ./.github/workflows/workflow-run-module-verify.yaml
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-module-verify.yaml@main
     with:
       GIT_SHA: ${{ inputs.GIT_SHA }}
       BUCKET: aptos-mainnet-backup-backup-831a69a8
@@ -55,7 +55,7 @@ jobs:
 
   test-verify-modules:
     if: ${{ github.event_name == 'pull_request' }}
-    uses: ./.github/workflows/workflow-run-module-verify.yaml
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-module-verify.yaml@main
     with:
       GIT_SHA: ${{ github.event.pull_request.head.sha }}
       BUCKET: aptos-testnet-backup-2223d95b
