--- a/.github/workflows/replay-verify.yaml
+++ b/.github/workflows/replay-verify.yaml
@@ -31,7 +31,7 @@ concurrency:
 jobs:
   replay-testnet:
     if: ${{ github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all' }}
-    uses: ./.github/workflows/workflow-run-replay-verify.yaml
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-replay-verify.yaml@main
     secrets: inherit
     with:
       GIT_SHA: ${{ inputs.GIT_SHA }}
@@ -47,7 +47,7 @@ jobs:
 
   replay-mainnet:
     if: ${{ github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all' }}
-    uses: ./.github/workflows/workflow-run-replay-verify.yaml
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-replay-verify.yaml@main
     secrets: inherit
     with:
       GIT_SHA: ${{ inputs.GIT_SHA }}
@@ -63,7 +63,7 @@ jobs:
 
   test-replay:
     if: ${{ github.event_name == 'pull_request' }}
-    uses: ./.github/workflows/workflow-run-replay-verify.yaml
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-replay-verify.yaml@main
     with:
       GIT_SHA: ${{ github.event.pull_request.head.sha }}
       # replay-verify config
