[gha] replay-verify on cadence correct conditional (#6583)

--- a/.github/workflows/replay-verify.yaml
+++ b/.github/workflows/replay-verify.yaml
@@ -22,7 +22,7 @@ on:
     paths:
       - ".github/workflows/replay-verify.yaml"
   schedule:
-    - cron: "0 19 * * *" # the main branch cadence
+    - cron: "0 20 * * *" # the main branch cadence
 
 # cancel redundant builds
 concurrency:
@@ -32,7 +32,7 @@ concurrency:
 
 jobs:
   replay-testnet:
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all' }}
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all' }}
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-replay-verify.yaml@main
     secrets: inherit
     with:
@@ -48,7 +48,7 @@ jobs:
       TIMEOUT_MINUTES: 720
 
   replay-mainnet:
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all' }}
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all' }}
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-replay-verify.yaml@main
     secrets: inherit
     with:
