[gha] fix replay verify cadence and job (#6586)
* [gha] replay-verify twice a day

* [gha] fix replay-verify running module verify

--- a/.github/workflows/replay-verify.yaml
+++ b/.github/workflows/replay-verify.yaml
@@ -22,7 +22,7 @@ on:
     paths:
       - ".github/workflows/replay-verify.yaml"
   schedule:
-    - cron: "0 20 * * *" # the main branch cadence
+    - cron: "0 8,20 * * *"
 
 # cancel redundant builds
 concurrency:
