--- a/crates/aptos/Cargo.toml
+++ b/crates/aptos/Cargo.toml
@@ -20,6 +20,7 @@ aptos-build-info = { workspace = true }
 aptos-cached-packages = { workspace = true }
 aptos-config = { workspace = true }
 aptos-crypto = { workspace = true }
+aptos-db-tool = { workspace = true }
 aptos-faucet = { workspace = true }
 aptos-framework = { workspace = true }
 aptos-gas = { workspace = true }
