--- a/.github/workflows/replay-verify.yaml
+++ b/.github/workflows/replay-verify.yaml
@@ -21,6 +21,7 @@ on:
   pull_request:
     paths:
       - ".github/workflows/replay-verify.yaml"
+      - "testsuite/replay-verify.py"
   schedule:
     - cron: "0 8,20 * * *"
 
