[Peer Monitoring] Add server-side support for simple messages.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -252,6 +252,8 @@ aptos-node-resource-metrics = { path = "crates/node-resource-metrics" }
 aptos-num-variants = { path = "crates/num-variants" }
 aptos-openapi = { path = "crates/aptos-openapi" }
 aptos-package-builder = { path = "aptos-move/package-builder" }
+aptos-peer-monitoring-service-client = { path = "network/peer-monitoring-service/client" }
+aptos-peer-monitoring-service-server = { path = "network/peer-monitoring-service/server" }
 aptos-peer-monitoring-service-types = { path = "network/peer-monitoring-service/types" }
 aptos-proptest-helpers = { path = "crates/aptos-proptest-helpers" }
 aptos-protos = { path = "crates/aptos-protos" }
