--- a/.github/workflows/forge-unstable.yaml
+++ b/.github/workflows/forge-unstable.yaml
@@ -1,5 +1,5 @@
-# Continuously run stable forge tests against the latest main branch.
-name: Continuous Forge Tests - Stable
+# Continuously run unstable forge tests against the latest main branch, to promote to stable.
+name: Continuous Forge Tests - Unstable
 
 permissions:
   issues: write
@@ -18,11 +18,10 @@ on:
         type: string
         description: The git SHA1 to checkout. This affects the Forge test runner that is used. If not specified, the latest main will be used
   schedule:
-    - cron: "0 9 * * *" # the main branch cadence
-    - cron: "0 21 * * *" # the QS "quorum-store" branch cadence
+    - cron: "0 15 * * *" # the main branch cadence
   pull_request:
     paths:
-      - ".github/workflows/forge-stable.yaml"
+      - ".github/workflows/forge-unstable.yaml"
 
 env:
   AWS_ACCOUNT_NUM: ${{ secrets.ENV_ECR_AWS_ACCOUNT_NUM }}
@@ -47,9 +46,6 @@ jobs:
             if [[ "${{ github.event.schedule }}" == "0 9 * * *" ]]; then
               echo "Branch: main"
               echo "BRANCH=main" >> $GITHUB_OUTPUT
-            elif [[ "${{ github.event.schedule }}" == "0 21 * * *" ]]; then
-              echo "Branch: quorum-store"
-              echo "BRANCH=quorum-store" >> $GITHUB_OUTPUT
             else
               echo "Unknown schedule: ${{ github.event.schedule }}"
               exit 1
@@ -80,115 +76,177 @@ jobs:
         # forge relies on the default and failpoints variants
         run: python3 testsuite/find_latest_image.py --variant failpoints --variant performance
 
-  run-forge-three-region:
+  forge-continuous:
     if: ${{ github.event_name != 'pull_request' }}
     needs: determine-test-metadata
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
     secrets: inherit
     with:
-      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-three-region
-      FORGE_RUNNER_DURATION_SECS: 1800
-      FORGE_TEST_SUITE: three_region_simulation
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
+      COMMENT_HEADER: forge-continuous
+      # This test suite is configured using the forge.py config test command
+      FORGE_TEST_SUITE: continuous
 
-  run-forge-three-region-different-node-speed:
+  run-forge-changing-working-quorum-test:
     if: ${{ github.event_name != 'pull_request' }}
     needs: determine-test-metadata
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
     secrets: inherit
     with:
-      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-three-region-with-different-node-speed
-      FORGE_RUNNER_DURATION_SECS: 3600
-      FORGE_TEST_SUITE: three_region_simulation_with_different_node_speed
+      FORGE_NAMESPACE: forge-changing-working-quorum-test
+      FORGE_RUNNER_DURATION_SECS: 1200
+      FORGE_TEST_SUITE: changing_working_quorum_test
+      POST_TO_SLACK: true
       FORGE_ENABLE_FAILPOINTS: true
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
 
-  run-forge-consensus-stress-test:
+  run-forge-changing-working-quorum-test-high-load:
     if: ${{ github.event_name != 'pull_request' }}
     needs: determine-test-metadata
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
     secrets: inherit
     with:
-      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-consensus-stress-test
-      FORGE_RUNNER_DURATION_SECS: 2400
-      FORGE_TEST_SUITE: consensus_stress_test
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
-
-  run-forge-account-creation-test:
-    if: ${{ github.event_name != 'pull_request' }}
-    needs: determine-test-metadata
-    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
-    secrets: inherit
-    with:
-      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-account-creation-test
+      FORGE_NAMESPACE: forge-changing-working-quorum-test-high-load
       FORGE_RUNNER_DURATION_SECS: 900
-      FORGE_TEST_SUITE: account_creation
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
-
-  run-forge-fullnode-reboot-stress-test:
-    if: ${{ github.event_name != 'pull_request' }}
-    needs: determine-test-metadata
-    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
-    secrets: inherit
-    with:
-      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-fullnode-reboot-stress
-      FORGE_RUNNER_DURATION_SECS: 1800
-      FORGE_TEST_SUITE: fullnode_reboot_stress_test
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
-
-  run-forge-state-sync-failures-catching-up-test:
-    if: ${{ github.event_name != 'pull_request' }}
-    needs: determine-test-metadata
-    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
-    secrets: inherit
-    with:
-      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-state-sync-failures-catching-up-test
-      FORGE_RUNNER_DURATION_SECS: 900
-      FORGE_TEST_SUITE: state_sync_failures_catching_up
+      FORGE_TEST_SUITE: changing_working_quorum_test_high_load
+      POST_TO_SLACK: true
       FORGE_ENABLE_FAILPOINTS: true
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
 
-  run-forge-state-sync-perf-fullnode-apply-test:
+  run-forge-different-node-speed-and-reliability-test:
     if: ${{ github.event_name != 'pull_request' }}
     needs: determine-test-metadata
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
     secrets: inherit
     with:
-      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-state-sync-perf-fullnode-apply
-      FORGE_RUNNER_DURATION_SECS: 2400
-      FORGE_TEST_SUITE: state_sync_perf_fullnodes_apply_outputs
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
+      FORGE_NAMESPACE: forge-different-node-speed-and-reliability-test
+      FORGE_RUNNER_DURATION_SECS: 900
+      FORGE_TEST_SUITE: different_node_speed_and_reliability_test
+      POST_TO_SLACK: true
+      FORGE_ENABLE_FAILPOINTS: true
 
-  run-forge-performance-test:
+  run-forge-graceful-overload-test:
     if: ${{ github.event_name != 'pull_request' }}
     needs: determine-test-metadata
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
     secrets: inherit
     with:
-      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-performance
-      FORGE_RUNNER_DURATION_SECS: 7200
+      FORGE_NAMESPACE: forge-graceful-overload-test
+      FORGE_RUNNER_DURATION_SECS: 1800
+      FORGE_TEST_SUITE: graceful_overload
+      POST_TO_SLACK: true
+
+  run-forge-haproxy:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-haproxy
+      FORGE_RUNNER_DURATION_SECS: 600
+      FORGE_ENABLE_HAPROXY: true
       FORGE_TEST_SUITE: land_blocking
-      FORGE_ENABLE_PERFORMANCE: true
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
+      POST_TO_SLACK: true
 
-  run-forge-compat:
+  run-forge-network-partition-test:
     if: ${{ github.event_name != 'pull_request' }}
     needs: determine-test-metadata
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
     secrets: inherit
     with:
-      FORGE_NAMESPACE: forge-compat
-      # Run for 5 minutes
-      FORGE_RUNNER_DURATION_SECS: 300
-      # This will upgrade from testnet branch to the latest main
-      FORGE_TEST_SUITE: compat
-      IMAGE_TAG: testnet
-      POST_TO_SLACK: ${{ needs.determine-test-metadata.outputs.BRANCH == 'main' }} # only post to slack on main branch
+      FORGE_NAMESPACE: forge-network-partition
+      # Run for 15 minutes
+      FORGE_RUNNER_DURATION_SECS: 900
+      FORGE_TEST_SUITE: network_partition
+      POST_TO_SLACK: true
+
+  run-forge-nft-mint-test:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-nft-mint-test
+      FORGE_RUNNER_DURATION_SECS: 900
+      FORGE_TEST_SUITE: nft_mint
+      POST_TO_SLACK: true
+
+  run-forge-single-vfn-perf:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-continuous-e2e-single-vfn
+      # Run for 8 minutes
+      FORGE_RUNNER_DURATION_SECS: 480
+      FORGE_TEST_SUITE: single_vfn_perf
+      POST_TO_SLACK: true
+
+  run-forge-state-sync-perf-fullnode-execute-test:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-state-sync-perf-fullnode-execute
+      # Run for 40 minutes
+      FORGE_RUNNER_DURATION_SECS: 2400
+      FORGE_TEST_SUITE: state_sync_perf_fullnodes_execute_transactions
+      POST_TO_SLACK: true
+
+  run-forge-state-sync-perf-fullnode-fast-sync-test:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-state-sync-perf-fullnode-fast-sync
+      # Run for 40 minutes
+      FORGE_RUNNER_DURATION_SECS: 2400
+      FORGE_TEST_SUITE: state_sync_perf_fullnodes_fast_sync
+      POST_TO_SLACK: true
+
+  run-forge-state-sync-perf-validator-test:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-state-sync-perf-validator
+      # Run for 40 minutes
+      FORGE_RUNNER_DURATION_SECS: 2400
+      FORGE_TEST_SUITE: state_sync_perf_validators
+      POST_TO_SLACK: true
+
+  run-forge-state-sync-slow-processing-catching-up-test:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-state-sync-slow-processing-catching-up-test
+      FORGE_RUNNER_DURATION_SECS: 900
+      FORGE_TEST_SUITE: state_sync_slow_processing_catching_up
+      POST_TO_SLACK: true
+      FORGE_ENABLE_FAILPOINTS: true
+
+  run-forge-twin-validator-test:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-twin-validator
+      FORGE_RUNNER_DURATION_SECS: 900
+      FORGE_TEST_SUITE: twin_validator_test
+      POST_TO_SLACK: true
+
+  run-forge-validator-reboot-stress-test:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      FORGE_NAMESPACE: forge-validator-reboot-stress
+      # Run for 40 minutes
+      FORGE_RUNNER_DURATION_SECS: 2400
+      FORGE_TEST_SUITE: validator_reboot_stress_test
+      POST_TO_SLACK: true
