--- a/.github/workflows/fullnode-intelligent-devnet-main.yaml
+++ b/.github/workflows/fullnode-intelligent-devnet-main.yaml
@@ -13,7 +13,16 @@ on:
       - ".github/workflows/fullnode-intelligent-devnet-main.yaml"
 
 jobs:
+  check-repo:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/check-aptos-core
+        with:
+          cancel-workflow: true
+
   fullnode-intelligent-devnet-main:
+    needs: check-repo
     uses: ./.github/workflows/run-fullnode-sync.yaml
     secrets: inherit
     with:
