[gha] fix permissions for forge and check-aptos-core on forks (#6726)
* [gha] fix forge checkout perms

* [gha] point check-aptos-core to main

* [gha] fix permissions for workflow cancel via check-aptos-core

* [gha] replay and module verify inherit permissions

--- a/.github/workflows/forge-stable.yaml
+++ b/.github/workflows/forge-stable.yaml
@@ -4,6 +4,9 @@ name: Continuous Forge Tests - Stable
 permissions:
   issues: write
   pull-requests: write
+  contents: read
+  id-token: write
+  actions: write #required for workflow cancellation via check-aptos-core
 
 on:
   # Allow triggering manually
@@ -66,7 +69,7 @@ jobs:
           ref: ${{ steps.determine-test-branch.outputs.BRANCH }}
           fetch-depth: 0
 
-      - uses: ./.github/actions/check-aptos-core
+      - uses: aptos-labs/aptos-core/.github/actions/check-aptos-core@main
         with:
           cancel-workflow: true
 
