--- a/.github/workflows/replay-verify.yaml
+++ b/.github/workflows/replay-verify.yaml
@@ -67,6 +67,7 @@ jobs:
   test-replay:
     if: ${{ github.event_name == 'pull_request' }}
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-replay-verify.yaml@main
+    secrets: inherit
     with:
       GIT_SHA: ${{ github.event.pull_request.head.sha }}
       # replay-verify config
