--- a/.github/workflows/copy-images-to-dockerhub-nightly.yaml
+++ b/.github/workflows/copy-images-to-dockerhub-nightly.yaml
@@ -7,13 +7,14 @@ on:
 permissions:
   contents: read
   id-token: write #required for GCP Workload Identity federation
+  actions: write #required for workflow cancellation via check-aptos-core
 
 jobs:
   check-repo:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/check-aptos-core
+      - uses: aptos-labs/aptos-core/.github/actions/check-aptos-core@main
         with:
           cancel-workflow: true
 
