--- a/.github/workflows/docker-build-test.yaml
+++ b/.github/workflows/docker-build-test.yaml
@@ -43,6 +43,7 @@ on: # build on main branch OR when a PR is labeled with `CICD:build-images`
       - testnet
       - mainnet
       - aptos-node-v*
+      - aptos-release-v*
       # experimental branches
       - performance_benchmark
       - quorum-store
